src/objects/pse__Proj__c.object
<CustomObject>
    <fields>
        <fullName>pse__Billing_Eligible_Last_Updated__c</fullName>
        <description>When counts of Billing Eligible business records are updated on the Project, this Date field is set to indicate when the data was last captured.</description>
        <inlineHelpText>When counts of Billing Eligible business records are updated on the Project, this Date field is set to indicate when the data was last captured.</inlineHelpText>
        <label>Billing Eligible Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Eligible_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Milestones that are currently available for billing event generation.  The maximum number of records you can track is 1999.</description>
        <inlineHelpText>Number of Milestones that are currently available for billing event generation.  The maximum number of records you can track is 1999.</inlineHelpText>
        <label>Billing Eligible Milestones</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Eligible_Misc_Adjustments__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Miscellaneous Adjustments that are currently available for billing event generation.  The maximum number of records you can track is 1999.</description>
        <inlineHelpText>Number of Miscellaneous Adjustments that are currently available for billing event generation.  The maximum number of records you can track is 1999.</inlineHelpText>
        <label>Billing Eligible Misc Adjustments</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Eligible_Timecard_Splits__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Timecard Splits that are currently available for billing event generation.  The maximum number of records you can track is 1999.</description>
        <inlineHelpText>Number of Timecard Splits that are currently available for billing event generation.  The maximum number of records you can track is 1999.</inlineHelpText>
        <label>Billing Eligible Timecard Splits</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Queues_Need_Recalc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Queues Need Recalc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Type__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>Time and Materials</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Billings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Bookings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Closed_for_Expense_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed for Expense Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Closed_for_Time_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed for Time Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>fferpcore__Company__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Copy_Child_Records_from_Template_Async__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, project child records copied using the Create Project From Template UI are created in asynchronous mode.</description>
        <inlineHelpText>If true, project child records copied using the Create Project From Template UI are created in asynchronous mode.</inlineHelpText>
        <label>Copy Child Records from Template Async</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Credited_Non_Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Current_Time_Period_End_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Current Time Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Current_Time_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Current Time Period For Projects</relationshipLabel>
        <relationshipName>CurrentTimePeriodForProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Daily_Timecard_Notes_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Daily Timecard Notes Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Email_Alert_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to available contacts. An email is sent to the selected contact when the value in the Percentage Used field equals or exceeds the value in the Alert Threshold field. No email is sent if this field is blank or if no email address is recorded for the selected contact. Apply Billing Cap must be selected and there must also be a value in the Alert Threshold field.</description>
        <inlineHelpText>Use the lookup to select the contact who will receive an email when the value in Percentage Used equals or exceeds the value in Alert Threshold. No email is sent if blank. You must also select Apply Billing Cap and enter a value in Alert Threshold.</inlineHelpText>
        <label>Alert Recipient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ProjectEmailAlertRecipient</relationshipLabel>
        <relationshipName>ProjectEmailAlertRecipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Estimated_Hours_at_Completion__c</fullName>
        <description>An estimate of the total hours to be spent on a project. Calculated using Total Submitted Hours plus Scheduled Hours Remaining.</description>
        <inlineHelpText>An estimate of the total hours to be spent on a project. Calculated using Total Submitted Hours plus Scheduled Hours Remaining.</inlineHelpText>
        <label>Estimated Hours at Completion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__ExcludeProjectFromDisplayOnBilling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, excludes the project from displaying on the billing screen.</description>
        <inlineHelpText>If selected, excludes the project from displaying on the billing screen.</inlineHelpText>
        <label>Exclude Project From Display On Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_From_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, do not include this project when generating billing events</description>
        <label>Exclude From Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Backlog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Backlog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Project_Planner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows exclusion of a project from the project planner</description>
        <inlineHelpText>Check to exclude this project from project planner</inlineHelpText>
        <label>Exclude from Project Planner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Project_Variance_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, excludes a project from the Calculate Hours Variance on Projects batch job that is run from the PSA Administration tab.</description>
        <inlineHelpText>Check to exclude this project from the Calculate Hours Variance on Projects batch job that is run from the PSA Administration tab.</inlineHelpText>
        <label>Exclude from Project Variance Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Excluded_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Budget__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Expense Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Notes__c</fullName>
        <label>Expense Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__External_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>External Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__External_Time_Cost__c</fullName>
        <label>External Time Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Financial_Status__c</fullName>
        <description>Select the current financial status from the picklist. Alternatively, use Process Builder or workflow rules to use your own logic to control the behavior of the corresponding color indicator field.</description>
        <inlineHelpText>Select the current financial status from the picklist. Alternatively, use Process Builder or workflow rules to use your own logic to control the behavior of the corresponding color indicator field.</inlineHelpText>
        <label>Financial Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Financial_Visual__c</fullName>
        <description>Shows the financial status of the project based on the color selected from the corresponding Financial Status picklist.</description>
        <formula>IF(ISPICKVAL(pse__Financial_Status__c,&quot;Yellow&quot;),IMAGE(&quot;/resource/pse__StatusImages/yellow.png&quot;,&quot;2-Yellow&quot;),IF(ISPICKVAL(pse__Financial_Status__c,&quot;Red&quot;),IMAGE(&quot;/resource/pse__StatusImages/red.png&quot;,&quot;3-Red&quot;),IF(ISPICKVAL(pse__Financial_Status__c,&quot;Green&quot;),IMAGE(&quot;/resource/pse__StatusImages/green.png&quot;,&quot;1-Green&quot;),&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the financial status of the project based on the color selected from the corresponding Financial Status picklist.</inlineHelpText>
        <label>Financial Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Forecast_Curve__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forecast Curve</label>
        <referenceTo>pse__Forecast_Curve__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Hierarchy_Depth__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hierarchy Depth</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hours_Cut_Off_Date__c</fullName>
        <description>The date used to calculate a project&apos;s variance values. The date last week that corresponds to the last day in the project&apos;s work calendar is used. If no work calendar exists, last Sunday&apos;s date is used.</description>
        <inlineHelpText>The date used to calculate a project&apos;s variance values. The date last week that corresponds to the last day in the project&apos;s work calendar is used. If no work calendar exists, last Sunday&apos;s date is used.</inlineHelpText>
        <label>Hours Cut Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Hours_to_Days_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies rules for converting hours to days for timecards against this project</description>
        <inlineHelpText>Specifies rules for converting hours to days for timecards against this project</inlineHelpText>
        <label>Hours to Days Rule</label>
        <referenceTo>pse__Hours_to_Days_Rule__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Inactive_Project_Backlog__c</fullName>
        <description>The amount of backlog (bookings - billings) that was made inactive when the project (and/or sub-projects) became inactive. For parent projects, this is a cumulative value. NOTE: this field is only intended to be updated by PSE.</description>
        <inlineHelpText>The amount of backlog (bookings - billings) that was made inactive when the project (and/or sub-projects) became inactive. For parent projects, this is a cumulative value. NOTE: this field is only intended to be updated by PSE.</inlineHelpText>
        <label>Inactive Project Backlog</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Include_In_Forecasting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this project participate in project forecasting?</description>
        <label>Include In Forecasting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Internal_Budget__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Internal Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Internal_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Internal Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Internal_Time_Cost__c</fullName>
        <label>Internal Time Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Invoiced__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Is_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this project is billable to a customer.</inlineHelpText>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Is_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Jira_Correlation_ID__c</fullName>
        <description>Unique identifier of the project or issue in Jira. Used for synchronization.</description>
        <inlineHelpText>Unique identifier of the project or issue in Jira. Used for synchronization.</inlineHelpText>
        <label>Jira Correlation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Jira_Project_Key__c</fullName>
        <description>Unique key of the project in Jira used to prefix issue keys.</description>
        <inlineHelpText>Unique key of the project in Jira used to prefix issue keys.</inlineHelpText>
        <label>Jira Project Key</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Jira_Project_Type__c</fullName>
        <description>Project type in Jira.</description>
        <inlineHelpText>Project type in Jira.</inlineHelpText>
        <label>Jira Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>business</fullName>
                    <label>Business</label>
                </value>
                <value>
                    <fullName>software</fullName>
                    <label>Software</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Jira_Project_URL__c</fullName>
        <description>URL to the related project in Jira.</description>
        <formula>IF(pse__Sync_With_Jira__c &amp;&amp; !ISBLANK(pse__Jira_Correlation_ID__c) &amp;&amp; (ISPICKVAL(pse__Jira_Project__c , &apos;&apos;) || ISPICKVAL(pse__Jira_Project__c , &apos;None&apos;)), HYPERLINK($Setup.pse__Integration_Hub_Connector_Jira_PSA__c.pse__Jira_Application_URL__c + &apos;/browse/&apos; + pse__Jira_Project_Key__c, &apos;View Project in Jira&apos;, &apos;_blank&apos;), IF(pse__Sync_With_Jira__c &amp;&amp; !ISBLANK(pse__Jira_Correlation_ID__c) &amp;&amp; (!ISBLANK(TEXT(pse__Jira_Project__c))), HYPERLINK($Setup.pse__Integration_Hub_Connector_Jira_PSA__c.pse__Jira_Application_URL__c + &apos;/browse/&apos; + TEXT(pse__Jira_Project__c), &apos;View Project in Jira&apos;, &apos;_blank&apos;),&apos;&apos;))</formula>
        <inlineHelpText>URL to the related project in Jira.</inlineHelpText>
        <label>Jira Project URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Jira_Project__c</fullName>
        <description>Picklist containing available Jira project keys. Key of the Jira project this project will be created as an issue for.</description>
        <inlineHelpText>Key of the Jira project this project will be created as an issue for.</inlineHelpText>
        <label>Jira Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Location__c</fullName>
        <label>Location</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALABAMA</fullName>
                </value>
                <value>
                    <fullName>ALASKA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANZAC</fullName>
                </value>
                <value>
                    <fullName>ARIZONA</fullName>
                </value>
                <value>
                    <fullName>ARKANSAS</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>COLORADO</fullName>
                </value>
                <value>
                    <fullName>CONNECTICUT</fullName>
                </value>
                <value>
                    <fullName>DELAWARE</fullName>
                </value>
                <value>
                    <fullName>DISTRICT OF COLUMBIA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>FEDERATED STATES OF MICRONESIA</fullName>
                </value>
                <value>
                    <fullName>FLORIDA</fullName>
                </value>
                <value>
                    <fullName>GEORGIA</fullName>
                </value>
                <value>
                    <fullName>GUAM</fullName>
                </value>
                <value>
                    <fullName>HAWAII</fullName>
                </value>
                <value>
                    <fullName>IDAHO</fullName>
                </value>
                <value>
                    <fullName>ILLINOIS</fullName>
                </value>
                <value>
                    <fullName>INDIANA</fullName>
                </value>
                <value>
                    <fullName>IOWA</fullName>
                </value>
                <value>
                    <fullName>KANSAS</fullName>
                </value>
                <value>
                    <fullName>KENTUCKY</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>LOUISIANA</fullName>
                </value>
                <value>
                    <fullName>MAINE</fullName>
                </value>
                <value>
                    <fullName>MARSHALL ISLANDS</fullName>
                </value>
                <value>
                    <fullName>MARYLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Margin__c</fullName>
        <formula>pse__Billings__c + pse__Pass_Through_Billings__c - pse__Internal_Costs__c - pse__External_Costs__c - pse__Expense_Costs__c - pse__Other_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Master_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Master Project For Sub-Projects:</relationshipLabel>
        <relationshipName>MasterProjectForSubProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Milestone_Cost__c</fullName>
        <label>Milestone Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_External_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Hours (External)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Hours (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Notes__c</fullName>
        <description>Staffing project notes</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Other_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Other Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Parent_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Immediate Sub-Projects</relationshipLabel>
        <relationshipName>ImmediateSubProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Pass_Through_Billings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pass-Through Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Hours_Complete__c</fullName>
        <description>The percentage of hours already completed on the project. Calculated using Total Submitted Hours divided by Estimated Hours at Completion multiplied by 100.</description>
        <inlineHelpText>The percentage of hours already completed on the project. Calculated using Total Submitted Hours divided by Estimated Hours at Completion multiplied by 100.</inlineHelpText>
        <label>Percent Hours Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Hours_Completed_For_Recognition__c</fullName>
        <description>Percentage of hours completed on this project, to be used in Revenue Forecasting calculations. The value is calculated in the following way: (Sum of approved timecard hours/Value in the field selected from the Total Hours Field on Project picklist on the relevant Forecast Setup record) multiplied by 100. If there is no active forecast setup record, the Total Hours Field on Project defaults to Estimated Hours at Completion. 
        This field is only populated when &quot;% Complete&quot; is displayed in the Recognition Method field, or when you are using the integration with FinancialForce Revenue Management and this project looks up to a FinancialForce Revenue Management template of type &quot;% Complete&quot;.</description>
        <inlineHelpText>Percentage of hours completed, for Revenue Forecasts using the &quot;% Complete&quot; recognition method. The value is (Sum of approved timecard hours/Value in field selected from Total Hours Field on Project picklist on Forecast Setup record) multiplied by 100.</inlineHelpText>
        <label>% Hours Completed for Recognition</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Percentage_Used__c</fullName>
        <description>The percentage of bookings that are already ready-to-bill, including any pre-billed amount.</description>
        <formula>IF( OR( pse__Bookings__c = 0.00, ISBLANK( pse__Bookings__c ) , pse__Apply_Billing_Cap__c = false) , null, (pse__Billings__c + pse__Pre_Billed__c) / pse__Bookings__c)</formula>
        <inlineHelpText>The percentage of bookings that are already ready-to-bill, including any pre-billed amount.</inlineHelpText>
        <label>Percentage Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Hours__c</fullName>
        <inlineHelpText>The number of hours planned for this project</inlineHelpText>
        <label>Planned Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Pre_Bill_Type__c</fullName>
        <label>Pre-Bill Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Pre_Billed__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pre-Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Project_ID_Chain__c</fullName>
        <label>Project ID Chain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_ID__c</fullName>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>pse__Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person responsible for this project (optional). If not provided, it&apos;s assumed that the record Owner is the project manager.</description>
        <label>Project Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects Managed</relationshipLabel>
        <relationshipName>ProjectsManaged</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project_Name_Chain__c</fullName>
        <label>Project Name Chain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_Phase__c</fullName>
        <label>Project Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strategy</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Requirements</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Project_Status_Notes__c</fullName>
        <label>Project Status Notes</label>
        <type>TextArea</type>
    </fields>
</CustomObject>